--- a/imagery/templates/pages/images.html
+++ b/imagery/templates/pages/images.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container">
     <h1>Welcome to my Gallery app</h1>
-    <form class="d-flex">
+    <form class="">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
