feature:added side bar and update index.html file

--- a/imagery/templates/pages/images.html
+++ b/imagery/templates/pages/images.html
@@ -6,5 +6,187 @@
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
+    <div class="row m-4">
+        <div class="col-md-3 my-2 mx-0">
+          <div class="img_card">
+           <a href="">
+            <img
+            src="/static/images/furniture1.jpg"
+            alt=""
+            
+            width="100%"
+          />
+           </a>
+            <div class="download m-2">
+              <a
+                class="btn btn-outline-info custom-btn"
+                href="/static/photos/{{image.img}}"
+                download
+                >download</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 my-2 mx-0">
+            <div class="img_card">
+             <a href="">
+              <img
+              src="/static/images/furniture1.jpg"
+              alt=""
+              
+              width="100%"
+            />
+             </a>
+              <div class="download m-2">
+                <a
+                  class="btn btn-outline-info custom-btn"
+                  href="/static/photos/{{image.img}}"
+                  download
+                  >download</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 my-2 mx-0">
+            <div class="img_card">
+             <a href="">
+              <img
+              src="/static/images/furniture1.jpg"
+              alt=""
+              
+              width="100%"
+            />
+             </a>
+              <div class="download m-2">
+                <a
+                  class="btn btn-outline-info custom-btn"
+                  href="/static/photos/{{image.img}}"
+                  download
+                  >download</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 my-2 mx-0">
+            <div class="img_card">
+             <a href="">
+              <img
+              src="/static/images/furniture1.jpg"
+              alt=""
+              
+              width="100%"
+            />
+             </a>
+              <div class="download m-2">
+                <a
+                  class="btn btn-outline-info custom-btn"
+                  href="/static/photos/{{image.img}}"
+                  download
+                  >download</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 my-2 mx-0">
+            <div class="img_card">
+             <a href="">
+              <img
+              src="/static/images/furniture1.jpg"
+              alt=""
+              
+              width="100%"
+            />
+             </a>
+              <div class="download m-2">
+                <a
+                  class="btn btn-outline-info custom-btn"
+                  href="/static/photos/{{image.img}}"
+                  download
+                  >download</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 my-2 mx-0">
+            <div class="img_card">
+             <a href="">
+              <img
+              src="/static/images/furniture1.jpg"
+              alt=""
+              
+              width="100%"
+            />
+             </a>
+              <div class="download m-2">
+                <a
+                  class="btn btn-outline-info custom-btn"
+                  href="/static/photos/{{image.img}}"
+                  download
+                  >download</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 my-2 mx-0">
+            <div class="img_card">
+             <a href="">
+              <img
+              src="/static/images/furniture1.jpg"
+              alt=""
+              
+              width="100%"
+            />
+             </a>
+              <div class="download m-2">
+                <a
+                  class="btn btn-outline-info custom-btn"
+                  href="/static/photos/{{image.img}}"
+                  download
+                  >download</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 my-2 mx-0">
+            <div class="img_card">
+             <a href="">
+              <img
+              src="/static/images/furniture1.jpg"
+              alt=""
+              
+              width="100%"
+            />
+             </a>
+              <div class="download m-2">
+                <a
+                  class="btn btn-outline-info custom-btn"
+                  href="/static/photos/{{image.img}}"
+                  download
+                  >download</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 my-2 mx-0">
+            <div class="img_card">
+             <a href="">
+              <img
+              src="/static/images/furniture1.jpg"
+              alt=""
+              
+              width="100%"
+            />
+             </a>
+              <div class="download m-2">
+                <a
+                  class="btn btn-outline-info custom-btn"
+                  href="/static/photos/{{image.img}}"
+                  download
+                  >download</a
+                >
+              </div>
+            </div>
+          </div>
+      </div>
 </div>
 {% endblock %}
