--- a/imagery/templates/pages/index.html
+++ b/imagery/templates/pages/index.html
@@ -1,7 +1,196 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container">
-    <h1>Welcome to my Gallery app</h1>
-    
+<div class="container-fluid">
+    <div class="row hero">
+        <h1>Welcome to my Gallery app</h1>
+        <div class="col-md-6">
+            <p>Description</p>
+        </div>
+    </div>
+    <div class="container mt-4">
+        <h3>Samples of photos in my Gallery</h3>
+        <div class="row m-4">
+            <div class="col-md-3 my-2 mx-0">
+              <div class="img_card">
+               <a href="">
+                <img
+                src="/static/images/furniture1.jpg"
+                alt=""
+                
+                width="100%"
+              />
+               </a>
+                <div class="download m-2">
+                  <a
+                    class="btn btn-outline-info custom-btn"
+                    href="/static/photos/{{image.img}}"
+                    download
+                    >download</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3 my-2 mx-0">
+                <div class="img_card">
+                 <a href="">
+                  <img
+                  src="/static/images/furniture1.jpg"
+                  alt=""
+                  
+                  width="100%"
+                />
+                 </a>
+                  <div class="download m-2">
+                    <a
+                      class="btn btn-outline-info custom-btn"
+                      href="/static/photos/{{image.img}}"
+                      download
+                      >download</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 my-2 mx-0">
+                <div class="img_card">
+                 <a href="">
+                  <img
+                  src="/static/images/furniture1.jpg"
+                  alt=""
+                  
+                  width="100%"
+                />
+                 </a>
+                  <div class="download m-2">
+                    <a
+                      class="btn btn-outline-info custom-btn"
+                      href="/static/photos/{{image.img}}"
+                      download
+                      >download</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 my-2 mx-0">
+                <div class="img_card">
+                 <a href="">
+                  <img
+                  src="/static/images/furniture1.jpg"
+                  alt=""
+                  
+                  width="100%"
+                />
+                 </a>
+                  <div class="download m-2">
+                    <a
+                      class="btn btn-outline-info custom-btn"
+                      href="/static/photos/{{image.img}}"
+                      download
+                      >download</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 my-2 mx-0">
+                <div class="img_card">
+                 <a href="">
+                  <img
+                  src="/static/images/furniture1.jpg"
+                  alt=""
+                  
+                  width="100%"
+                />
+                 </a>
+                  <div class="download m-2">
+                    <a
+                      class="btn btn-outline-info custom-btn"
+                      href="/static/photos/{{image.img}}"
+                      download
+                      >download</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 my-2 mx-0">
+                <div class="img_card">
+                 <a href="">
+                  <img
+                  src="/static/images/furniture1.jpg"
+                  alt=""
+                  
+                  width="100%"
+                />
+                 </a>
+                  <div class="download m-2">
+                    <a
+                      class="btn btn-outline-info custom-btn"
+                      href="/static/photos/{{image.img}}"
+                      download
+                      >download</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 my-2 mx-0">
+                <div class="img_card">
+                 <a href="">
+                  <img
+                  src="/static/images/furniture1.jpg"
+                  alt=""
+                  
+                  width="100%"
+                />
+                 </a>
+                  <div class="download m-2">
+                    <a
+                      class="btn btn-outline-info custom-btn"
+                      href="/static/photos/{{image.img}}"
+                      download
+                      >download</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 my-2 mx-0">
+                <div class="img_card">
+                 <a href="">
+                  <img
+                  src="/static/images/furniture1.jpg"
+                  alt=""
+                  
+                  width="100%"
+                />
+                 </a>
+                  <div class="download m-2">
+                    <a
+                      class="btn btn-outline-info custom-btn"
+                      href="/static/photos/{{image.img}}"
+                      download
+                      >download</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 my-2 mx-0">
+                <div class="img_card">
+                 <a href="">
+                  <img
+                  src="/static/images/furniture1.jpg"
+                  alt=""
+                  
+                  width="100%"
+                />
+                 </a>
+                  <div class="download m-2">
+                    <a
+                      class="btn btn-outline-info custom-btn"
+                      href="/static/photos/{{image.img}}"
+                      download
+                      >download</a
+                    >
+                  </div>
+                </div>
+              </div>
+          </div>
+    </div>
 </div>
 {% endblock %}
